Add pause/settings UI, AI & debug tools
Add a pause menu and settings screen (HTML + new css/pause.css) and wire up UI controls to the game loop. Persisted settings (auto-attack, mute, volume) are stored in localStorage and applied at runtime. Major game.js changes: tuned movement speeds, added DEBUG_MODE with on-screen debug overlays (hitboxes, movement arrows, FPS), expanded AI stateKey to include arena dimensions and a 4-bit wall bitmask (max states bumped), implemented stuck detection/un-stuck logic and improved navigation/steering and reward handling, and added pause/resume/quit/settings logic with listeners. Server-side (GameServer.java) was made Java 8-friendly: replaced newer stream helpers with readAllBytes/transfer helpers, safer string handling for names, explicit UTF-8 file IO, and small I/O refactors. Updated qtable.json and compiled class files accordingly.